# senju

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  Dockerfile-DEV  README.md  coverage.sh  docker-compose.yml  entrypoint.sh  pyproject.toml  run.sh
.github/workflows/: ci.yml  codecov.yml  formatter.yml  gendocs.yml  release.yaml  release.yml  tests.yml
docs/: auto_docu.sh  requirements.md
docs/source/: conf.py  index.rst  usage.rst
docs/source/_modules/: haiku.rst  modules.rst
requirements/: requirements.md
senju/: ai_gen.py  haiku.py  image_reco.py  main.py  store_manager.py  test.py
senju/static/js/: scan.js
senju/templates/: base.html  base.jinja  haiku.html  haiku.jinja  index.html  index.jinja  info.html  prompt.html  scan.html
source/: conf.py  index.rst
tests/: conftest.py  test_haiku.py  test_store.py  test_tests.py
