[project]
name = "senju"
version = "0.1.0"
description = "API / Webservice for Phrases/Words/Kanji/Haiku"
authors = [{ name = "Christoph J. Scherr", email = "software@cscherr.de" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
	"jinja2 (>=3.1.5,<4.0.0)",
	"pytest>=7.0.0",
	"flask (>=3.1.0,<4.0.0)",
	"tinydb (>=3.1.0,<4.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
sennen = "senju.main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
