[project]
name = "senju"
version = "0.1.1"
description = "API / Webservice for Phrases/Words/Kanji/Haiku"
authors = [
	{ name = "Christoph J. Scherr", email = "software@cscherr.de" },
	{ name = "Moritz Marquard", email = "mrmarquard@protonmail.com" },
]
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
	"jinja2 (>=3.1.5,<4.0.0)",
	"pytest>=7.0.0",
	"flask (>=3.1.0,<4.0.0)",
	"tinydb (>=3.1.0,<4.0.0)",
	"requests (>=2.32.3,<3.0.0)",
	"coverage (>=7.6.12,<8.0.0)",
	"pytest-httpserver (>=1.1.2,<2.0.0)",
	"pillow (>=11.1.0,<12.0.0)",
	"torch (>=2.6.0,<3.0.0)",
	"transformers (>=4.50.0,<5.0.0)",
	"waitress (>=3.0.2,<4.0.0)",
]
license = { file = "LICENSE" }


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
senju = "senju.main:main"

[tool.poetry.group.dev.dependencies]
sphinx = "8.1.3"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
